Review comments by Francis

--- a/DimitrisKafetzis-cv-en-anonymised.tex
+++ b/DimitrisKafetzis-cv-en-anonymised.tex
@@ -7,15 +7,15 @@
 
 \documentclass{CVSoftwareEngineer}
 
-\cvname{Kafetzis, Dimitris Andreas}
+\cvname{Surname, First name}
 \cvjobtitle{Principal Software Engineer}
 \cvdate{}
 \cvnumberphone{}
-\cvaddress{Potong Pasir, Singapore}
+\cvaddress{Blue lake, Wonderland}
 \cvsite{}
-\cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{in/kafetzisd}}
-\cvgithub{\href{https://github.com/amolofos}{github.com/amolofos}}
-\cvmail{kafetzis.dimitris.andreas@gmail.com}
+\cvlinkedin{\href{https://www.linkedin.com/in/xxxx}{in/xxxx}}
+\cvgithub{\href{https://github.com/xxxx}{github.com/xxxx}}
+\cvmail{test.email@gmail.com}
 
 \begin{document}
 
@@ -41,7 +41,7 @@
 							row sep=5pt] (contact) {
 								\node{\textsc{\faInfoCircle}}; & \node{
 									\begin{varwidth}{\cvSideWidth-1cm}
-										Greek working under \textit{Employment Pass} in Singapore \\
+										Parrot working under \textit{Visa xxx} in Wonderland \\
 									\end{varwidth}
 								};\\
 								\ifthenelse{\equal{\cvdate}{}}{}{\node{\textsc{\faBirthdayCake}};   & \node{\cvdate};\\}
@@ -62,9 +62,9 @@
 							column sep=5pt,
 							row sep=5pt,
 						] (contact) {
-							\node[languageText]{English};  & \node[languageProgressArea, align=left](language 1){}; & \node[languageTextComment]{}; \\
-							\node[languageText]{Greek};    & \node[languageProgressArea, align=left](language 2){}; & \node[languageTextComment]{Mother language}; \\
-							\node[languageText]{Mandarin}; & \node[languageProgressArea, align=left](language 3){}; & \node[languageTextComment]{Just started}; \\
+							\node[languageText]{English};   & \node[languageProgressArea, align=left](language 1){}; & \node[languageTextComment]{}; \\
+							\node[languageText]{Language1}; & \node[languageProgressArea, align=left](language 2){}; & \node[languageTextComment]{Mother language}; \\
+							\node[languageText]{Language2}; & \node[languageProgressArea, align=left](language 3){}; & \node[languageTextComment]{Just started}; \\
 							% Added so we add some ysep bottom space to the outer, surounding personalDetailsBox node.
 							\node[languageText]{};         & \node                                              {}; & \node[languageTextComment]{}; \\
 						};
@@ -86,8 +86,8 @@
 		\begin{center}
 			Not completed tertiary education
 		\end{center}
-		I entered on 2003 the Electrical Engineering and Computer Science department
-		of the Polytechnic Faculty, University of Patras, Greece, {\scriptsize\href{http://www.ece.upatras.gr}{www.ece.upatras.gr}},
+		I entered on yyyy the Electrical Engineering and Computer Science department
+		of the Polytechnic Faculty, University of Wonderland, Wonderland, {\scriptsize\href{http://www.xxx.yyy.org}{yyy.org}},
 		attending 5 years of study without completing my Thesis and receiving the Diploma.
 
 		\section{{\small \faCalendar} Daily work activities}
@@ -117,15 +117,15 @@
 				(item 1)
 				{\cvExperience
 					{Principal Software Engineer}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
-					{Singapore}
+					{\href{https://www.dreamCompany.com/}{Dream Company}}
+					{Wonderland}
 					{2018-09 - Today}
 					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[*] Hardened the funding flow ensuring eWallet integrity
 							\item[*] Enchanced the performance of slow database queries
 							\item[*] Investigated high profile production issues and present
 								them to C level stakeholders
-							\item[*] Migrated 80 million lottery bets to renewed data model
+							\item[*] Migrated 80 million transactions to renewed data model
 						\end{enumerate}
 					}
 				};
@@ -152,8 +152,8 @@
 				(item 2)
 				{\cvExperience
 					{Senior Software Engineer}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
-					{Singapore}
+					{\href{https://www.dreamCompany.com/}{Dream Company}}
+					{Wonderland}
 					{2015-10 - 2018-08 (2yrs 11mos)}
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
@@ -184,15 +184,15 @@
 				eventDotText]
 				(item 3)
 				{\cvExperience{Software Engineer}
-					{\href{http://www.openbet.com}{OpenBet Ltd (Part of NYX Gaming Group)}}
-					{Athens, Greece}
+					{\href{https://www.dreamCompany.com/}{Dream Company}}
+					{Wonderland}
 					{2012-11 - 2015-09 (2 yrs 11mos)}
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[*] Performed multiple production releases
 							\item[*] Wrote the extraction scripts of a multi component data migration
 							\item[*] Refined and improved my team's release process
-							\item[*] Integrated with Paypal \& Safecharge payment providers tokenizing
+							\item[*] Integrated with Provider1 \& Provider2 payment providers tokenizing
 							credit card storage reducing system's security exposure.
 						\end{enumerate}
 					}
@@ -219,10 +219,10 @@
 
 		\section{{\small \faGit} Projects}
 		\begin{enumerate}[leftmargin=0.5cm]
-			\item[*] \textbf{\href{https://github.com/amolofos/automated-workstation-setup}{Automated workstation setup}} \\
+			\item[*] \textbf{Automated system setup} \\
 				\textit{Ansible} scripts automating the setup of a brand new Ubuntu
 				workstation, as well as non-attended updates.
-			\item[*] \textbf{\href{https://github.com/amolofos/cryptography-examples}{Cryptography examples}} \\
+			\item[*] \textbf{Crypto examples} \\
 				\textit{Java \& Python} showcase of different cryptographic
 				algorithms and libraries producing cross language, interchangable encryption results.
 		\end{enumerate}
@@ -242,8 +242,8 @@
 				\node[skillText]{Maven, Jenkins etc};        & \node[skillProgressArea, align=left](skill  4){}; & \node[skillTextComment]{7}; \\
 				\node[skillText]{Ansible};                   & \node[skillProgressArea, align=left](skill  5){}; & \node[skillTextComment]{4}; \\
 				\node[skillText]{Java 8 \& Springboot};      & \node[skillProgressArea, align=left](skill  6){}; & \node[skillTextComment]{2}; \\
-				\node[skillText]{Python};                    & \node[skillProgressArea, align=left](skill  7){}; & \node[skillTextComment]{2}; \\
-				\node[skillText]{Tcl};                       & \node[skillProgressArea, align=left](skill  8){}; & \node[skillTextComment]{7}; \\
+				\node[skillText]{PHP};                       & \node[skillProgressArea, align=left](skill  7){}; & \node[skillTextComment]{2}; \\
+				\node[skillText]{Python};                    & \node[skillProgressArea, align=left](skill  8){}; & \node[skillTextComment]{7}; \\
 			};
 			\draw (skill  1.west) node[skillProgressBar, minimum width=0.5*\cvSkillBarWidth] {};
 			\draw (skill  2.west) node[skillProgressBar, minimum width=0.7*\cvSkillBarWidth] {};
