--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -1,10 +1,3 @@
-% -----------------------------------------------------------------------------
-%
-% TODOs
-%  * Last updated - see deedy
-%  *
-% -----------------------------------------------------------------------------
-
 \documentclass{CVSoftwareEngineer}
 
 \cvname{Kafetzis, Dimitris Andreas}
@@ -27,9 +20,8 @@
 			\node[personalDetailsBox] (PersonalDetails){
 
 				\begin{minipage}{\cvSideWidth-0.5cm}
+					\section{\textbf{\cvname}}
 					\begin{center}
-						\section{Who am I?}
-						{\textbf{\Large\color{black}\cvname \\}}
 						{\Large\color{black!80}\cvjobtitle \\}
 					\end{center}
 
@@ -76,17 +68,23 @@
 			};
 		\end{tikzpicture}
 
-		\section{About me}
-		My experience spans across 7+ years designing and building with highly
-		transactional, web, relational database backed systems, 5 years of which
-		on distributed platforms. I focus mainly in the backend services and
-		the persistence, database infrastructure.
-
 		\section{Education}
-		\begin{center}
-			Not completed tertiary education
-		\end{center}
-		Electrical Engineering and Computer Science, University of Patras, Greece [2003 - 2009 DO]
+		\centerline{Not completed tertiary education}
+		{\scriptsize 2003 - 2009 (DO)} Electrical Engineering and Computer Science, University of Patras, Greece
+
+		\section{Projects}
+		\cvProject
+			{\href{https://github.com/amolofos/automated-workstation-setup}{Automated workstation setup}}
+			{\textit{github}}
+			{\textit{Ansible} scripts automating the setup of a brand new Ubuntu
+				workstation and supporting non-attended updates}
+		\\
+		\\
+		\cvProject
+			{\href{https://github.com/amolofos/cryptography-examples}{Cryptography examples}}
+			{\textit{github}}
+			{\textit{Java \& Python} showcase of different cryptographic
+					algorithms and libraries producing cross language, interchangeable encryption results}
 
 		\section{Daily work activities}
 		\begin{tikzpicture}
@@ -119,11 +117,15 @@
 					{Singapore}
 					{2018-09 - Today}
 					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[\textasteriskcentered] Hardened the funding flow ensuring eWallet integrity
-							\item[\textasteriskcentered] Enchanced the performance of slow database queries
-							\item[\textasteriskcentered] Investigated high profile production issues and present
-								them to C level stakeholders
-							\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed data model
+							\item[\textasteriskcentered] Led a team of 3 engineers with the goal to harden the
+								funding flow ensuring eWallet integrity resulting in a drop of 1 incident per week
+								to 1 per year
+							\item[\textasteriskcentered] Enhanced the performance of slow database queries bring
+								the number of production incidents due to human design error down to zero (0)
+							\item[\textasteriskcentered] Investigated more than 20 high profile production
+								issues and presented 4 sensitive incidents to C level stakeholders
+							\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed,
+								more robust data model
 						\end{enumerate}
 					}
 				};
@@ -158,11 +160,15 @@
 							\item[\textasteriskcentered] Coordinated development of cross functional features
 								amongst teams of different locations with a goal to rollout
 								our solution to a new tier 1 customer
-							\item[\textasteriskcentered] Owned the data migration including transaction history
-								and user activity onto the new platform
-							\item[\textasteriskcentered] Designed distributed queries for Informix database
-							\item[\textasteriskcentered] Defined the release process from code to production
-							\item[\textasteriskcentered] Rewrote the ansible deployment scripts reducing production incidents
+							\item[\textasteriskcentered] Owned the data migration into the new
+								platform including 100 million rows of transaction history and
+								user activity and completed in under 3 hours
+							\item[\textasteriskcentered] Designed distributed queries for Informix database materialising
+								the reporting needs of the Finance and Trading departments
+							\item[\textasteriskcentered] Influenced the release process from code to
+								production increasing the delivery capacity of the team
+							\item[\textasteriskcentered] Rewrote the ansible deployment scripts
+								reducing to zero the release introduced incidents
 						\end{enumerate}
 					}
 				};
@@ -187,11 +193,11 @@
 					{2012-11 - 2015-09 (2 yrs 11mos)}
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[\textasteriskcentered] Performed multiple production releases
-							\item[\textasteriskcentered] Wrote the extraction scripts of a multi component data migration
-							\item[\textasteriskcentered] Refined and improved my team's release process
-							\item[\textasteriskcentered] Integrated with Paypal \& Safecharge payment providers tokenizing
-							credit card storage reducing system's security exposure.
+							\item[\textasteriskcentered] Wrote and performed the extraction of
+								one billion rows during uptime and no impact to operations
+							\item[\textasteriskcentered] Integrated with Paypal \& Safecharge
+								payment providers tokenizing credit card information removing the\
+								need for PCI compliance
 						\end{enumerate}
 					}
 				};
@@ -216,44 +222,16 @@
 			\draw[very thick, {Triangle[length = 7pt)]}-{}, shorten <=-2mm] (start.north) to (end.south);
 		\end{tikzpicture}
 
-		\section{Projects}
-		\begin{enumerate}[leftmargin=0.5cm]
-			\item[\textasteriskcentered] \textbf{\href{https://github.com/amolofos/automated-workstation-setup}{Automated workstation setup}} \\
-				\textit{Ansible} scripts automating the setup of a brand new Ubuntu
-				workstation, as well as non-attended updates.
-			\item[\textasteriskcentered] \textbf{\href{https://github.com/amolofos/cryptography-examples}{Cryptography examples}} \\
-				\textit{Java \& Python} showcase of different cryptographic
-				algorithms and libraries producing cross language, interchangable encryption results.
-		\end{enumerate}
-
 		\section{Technology stack}
-		\begin{tikzpicture}[every node/.style={text depth=0pt, inner sep=0pt, outer sep=0pt}]
-			\matrix [
-				column 1/.style={anchor=east},
-				column 2/.style={anchor=west},
-				column 3/.style={anchor=west, align=left},
-				column sep=1pt,
-				row sep=7pt,
-			] (skills) {
-				\node[skillText]{Distributed systems};       & \node[skillProgressArea, align=left](skill  1){}; & \node[skillTextComment]{5}; \\
-				\node[skillText]{Linux, Ubuntu, RedHat};     & \node[skillProgressArea, align=left](skill  2){}; & \node[skillTextComment]{7}; \\
-				\node[skillText]{Rdbms, informix. postgres}; & \node[skillProgressArea, align=left](skill  3){}; & \node[skillTextComment]{7}; \\
-				\node[skillText]{Maven, Jenkins etc};        & \node[skillProgressArea, align=left](skill  4){}; & \node[skillTextComment]{7}; \\
-				\node[skillText]{Ansible};                   & \node[skillProgressArea, align=left](skill  5){}; & \node[skillTextComment]{4}; \\
-				\node[skillText]{Java 8 \& Springboot};      & \node[skillProgressArea, align=left](skill  6){}; & \node[skillTextComment]{2}; \\
-				\node[skillText]{Python};                    & \node[skillProgressArea, align=left](skill  7){}; & \node[skillTextComment]{2}; \\
-				\node[skillText]{Tcl};                       & \node[skillProgressArea, align=left](skill  8){}; & \node[skillTextComment]{7}; \\
-			};
-			\draw (skill  1.west) node[skillProgressBar, minimum width=0.5*\cvSkillBarWidth] {};
-			\draw (skill  2.west) node[skillProgressBar, minimum width=0.7*\cvSkillBarWidth] {};
-			\draw (skill  3.west) node[skillProgressBar, minimum width=0.7*\cvSkillBarWidth] {};
-			\draw (skill  4.west) node[skillProgressBar, minimum width=0.7*\cvSkillBarWidth] {};
-			\draw (skill  5.west) node[skillProgressBar, minimum width=0.4*\cvSkillBarWidth] {};
-			\draw (skill  6.west) node[skillProgressBar, minimum width=0.2*\cvSkillBarWidth] {};
-			\draw (skill  7.west) node[skillProgressBar, minimum width=0.2*\cvSkillBarWidth] {};
-			\draw (skill  8.west) node[skillProgressBar, minimum width=0.7*\cvSkillBarWidth] {};
-			\draw[decorate, decoration={brace, amplitude=5pt, raise=4ex}] (skill 8.west) (skill 1.east) -- (skill 8.east) node[midway, xshift=3.5em]{years};
-		\end{tikzpicture}
+		\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*]
+			\item[\textasteriskcentered] Distributed systems, Linux, RedHat : Architectured distributed linux systems for the past 5 years
+			\item[\textasteriskcentered] Rdbms, informix \& postgres : Reviewed the performance of rdbms systems the past 7 years
+			\item[\textasteriskcentered] Maven, Jenkins etc : Defined the build process of Java and database modules
+			\item[\textasteriskcentered] Ansible \& Python : Established the correct usage of ansible scripts and developed
+				ansible modules reducing the complexity and increasing the
+				effectiveness of the deployment process
+			\item[\textasteriskcentered] Java 8 \& Springboot : Maintained and evolved applications for the past 2 years
+		\end{enumerate}
 
 	\end{paracol}
 \end{document}
