--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -19,7 +19,7 @@
 		\begin{tikzpicture}
 			\node[personalDetailsBox] (PersonalDetails){
 
-				\begin{minipage}{\cvSideWidth-0.5cm}
+				\begin{minipage}{\cvSideWidth-1cm}
 					\section{\textbf{\cvname}}
 					\begin{center}
 						{\Large\color{black!80}\cvjobtitle \\}
@@ -89,10 +89,10 @@
 		\section{Daily work activities}
 		\begin{tikzpicture}
 			\pie[polar, explode=0.1, radius=1.2, rotate=0, color = {cvPie!10, cvPie, cvPie!50, cvPie!60, cvPie!30, cvPie!40}]{
-				15/Business analysis,
+				15/Code review,
 				20/Code development,
 				20/System design,
-				15/Code review,
+				15/Business analysis,
 				15/Production support,
 				15/Mentoring
 			}
@@ -116,7 +116,7 @@
 					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 					{Singapore}
 					{2018-09 - Today}
-					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+					{\begin{enumerate}[labelindent=0pt, nosep, labelwidth=!, leftmargin=*]
 							\item[\textasteriskcentered] Led a team of 3 engineers with the goal to harden the
 								funding flow ensuring eWallet integrity resulting in a drop of 1 incident per week
 								to 1 per year
