--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -20,10 +20,21 @@
 	\section{Work experience}
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
 		\item[] \cvExperience
+			{Principal Integration Engineer | Site Reliability Engineer}
+			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+			{Singapore}
+			{Sept 2020 - Present}
+			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+					\item[*] Defined the initial process for an SRE rota across two teams located in multiple locations
+					\item[*] Configured prometheus and grafana infrastructure reporting accurately the production issues reducing the noise of the daily SRE checks
+				\end{enumerate}
+			}
+
+		\item[] \cvExperience
 			{Principal Software Engineer}
 			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 			{Singapore}
-			{Sep 2018 - Present}
+			{Sep 2018 - Aug 2020}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Led a team of 3 engineers with the goal to harden the
 						funding flow ensuring eWallet integrity resulting in a drop of 1 incident per week
