--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -92,13 +92,6 @@
 			{\textit{github}}
 			{\textit{Ansible} scripts automating the setup of a brand new Ubuntu
 				workstation and supporting non-attended updates}
-%		\\
-%		\\
-%		\cvProject
-%			{\href{https://github.com/amolofos/cryptography-examples}{Cryptography examples}}
-%			{\textit{github}}
-%			{\textit{Java \& Python} showcase of different cryptographic
-%					algorithms and libraries producing cross language, interchangeable encryption results}
 
 		\section{Daily work activities}
 		\begin{tikzpicture}
@@ -118,50 +111,73 @@
 		\section{Work experience}
 		\begin{tikzpicture}][every node/.style={inner sep=0pt, outer sep=0pt}]
 
+			% item 4
 			\node[
 				eventDotText]
-				(item 1 header)
+				(item 4 header)
 				{\phantom{Evening}};
 			\node[
 				eventDotText]
-				(item 1)
+				(item 4)
 				{\cvExperience
-					{Principal Software Engineer}
+					{Principal Integration Engineer | Site Reliability Engineer}
 					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 					{Singapore}
-					{Sept 2018 - Present}
-					{\begin{enumerate}[labelindent=0pt, nosep, labelwidth=!, leftmargin=*]
-							\item[\textasteriskcentered] Led a team of 3 engineers with the goal to harden the
-								funding flow ensuring eWallet integrity resulting in a drop of 1 incident per week
-								to 1 per year
-							\item[\textasteriskcentered] Enhanced the performance of slow database queries bring
-								the number of production incidents due to human design error down to zero (0)
-							\item[\textasteriskcentered] Investigated more than 20 high profile production
-								issues and presented 4 sensitive incidents to C level stakeholders
-							\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed,
-								more robust data model
+					{2020-08 - Today}
+					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+							\item[*] Defined the initial process for an SRE rota across two teams located in multiple locations
+							\item[*] Configured prometheus and grafana infrastructure reporting accurately the production issues reducing the noise of the daily SRE checks
 						\end{enumerate}
 					}
 				};
 			\node[
-				left=\cvTimeDotSepMain of item 1 header,
+				left=\cvTimeDotSepMain of item 4 header,
 				timeDot]
 				(start)
 				{};
 			\node[
-				right=\cvTimeDotSepSecondary of item 1 header,
+				right=\cvTimeDotSepSecondary of item 4 header,
 				invisibleTimeDot]
 				(startInner)
 				{};
 
+			% item 3
+			\node[
+				below=\cvSectionSep of item 4.south west,
+				eventDotText]
+				(item 3 header)
+				{\phantom{Evening}};
+			\node[
+				below=\cvSectionSep of item 4.south west,
+				eventDotText]
+				(item 3)
+				{\cvExperience
+					{Principal Software Engineer}
+					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+					{Singapore}
+					{2018-09 - 2020-07}
+					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+							\item[*] Hardened the funding flow ensuring eWallet integrity
+							\item[*] Enchanced the performance of slow database queries
+							\item[*] Investigated high profile production issues and present
+								them to C level stakeholders
+							\item[*] Migrated 80 million lottery bets to renewed data model
+						\end{enumerate}
+					}
+				};
+			\node[
+				left=\cvTimeDotSepMain of item 3 header,
+				timeDot]
+				{};
+
 			% item 2
 			\node[
-				below=\cvSectionSep of item 1.south west,
+				below=\cvSectionSep of item 3.south west,
 				eventDotText]
 				(item 2 header)
 				{\phantom{Evening}};
 			\node[
-				below=\cvSectionSep of item 1.south west,
+				below=\cvSectionSep of item 3.south west,
 				eventDotText]
 				(item 2)
 				{\cvExperience
@@ -191,16 +207,16 @@
 				timeDot]
 				{};
 
-			% item 3
+			% item 1
 			\node[
 				below=\cvSectionSep of item 2.south west,
 				eventDotText]
-				(item 3 header)
+				(item 1 header)
 				{\phantom{Evening}};
 			\node[
 				below=\cvSectionSep of item 2.south west,
 				eventDotText]
-				(item 3)
+				(item 1)
 				{\cvExperience{Software Engineer}
 					{\href{http://www.openbet.com}{OpenBet Ltd (Part of NYX Gaming Group)}}
 					{Athens, Greece}
@@ -216,16 +232,16 @@
 					}
 				};
 			\node[
-				left=\cvTimeDotSepMain of item 3 header,
+				left=\cvTimeDotSepMain of item 1 header,
 				timeDot]
 				{};
 			\node[
-				below=0cm of item 3.south east,
+				below=0cm of item 1.south east,
 				invisibleTimeDot]
 				(endInner)
 				{};
 			\node[
-				left=\cvTimeDotSepMain of item 3 header,
+				left=\cvTimeDotSepMain of item 1 header,
 				invisibleTimeDot]
 				(end)
 				{};
