Readme build section alignment and fix SRE name in role

--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -4,7 +4,7 @@
 
 \cvname{Kafetzis, Dimitris Andreas}
 \cvjobtitle{Principal Software Engineer}
-\cvaddress{Potong Pasir, Singapore}
+\cvaddress{Singapore}
 \cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{linkedin.com/in/kafetzisd}}
 \cvgithub{\href{https://github.com/amolofos}{github.com/amolofos}}
 \cvmail{kafetzis.dimitris.andreas@gmail.com}
@@ -20,10 +20,10 @@
 	\section{Work experience}
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
 		\item[] \cvExperience
-			{Principal Integration Engineer | Site Reliability Engineer}
+			{Principal Integration Engineer \textbar SRE}
 			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 			{Singapore}
-			{Sept 2020 - Present}
+			{Aug 2020 - Present}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[*] Defined the initial process for an SRE rota across two teams located in multiple locations
 					\item[*] Configured prometheus and grafana infrastructure reporting accurately the production issues reducing the noise of the daily SRE checks
@@ -34,7 +34,7 @@
 			{Principal Software Engineer}
 			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 			{Singapore}
-			{Sep 2018 - Aug 2020}
+			{Sep 2018 - Jul 2020 (1yr 11mos)}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Led a team of 3 engineers with the goal to harden the
 						funding flow ensuring eWallet integrity resulting in a drop of 1 incident per week
@@ -88,7 +88,7 @@
 	\section{Skills \& Technology stack}
 	\begin{enumerate}[labelwidth=!, labelindent=22pt, leftmargin=*, rightmargin=15pt]
 		\item[\textasteriskcentered] \textit{Agile}: Utilised a combination of Kanban and Scrum techniques in small (4 members)
-			and larger (15+ member) teams
+			and larger teams
 		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}: Crafted relational database queries and reviewed
 			the performance of data intensive rdbms systems for the past 7 years
 		\item[\textasteriskcentered] \textit{Ansible \& Python}: Established the correct usage of Ansible scripts reducing the complexity
