--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -113,7 +113,7 @@
 				eventDotText]
 				(item 4)
 				{\cvExperience
-					{Principal Integration Engineer | Site Reliability Engineer}
+					{Principal Integration Engineer \textbar SRE}
 					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 					{Singapore}
 					{2020-08 - Today}
@@ -148,7 +148,7 @@
 					{Principal Software Engineer}
 					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 					{Singapore}
-					{2018-09 - 2020-07}
+					{2018-09 - 2020-07 (1yr 11mos)}
 					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[*] Hardened the funding flow ensuring eWallet integrity
 							\item[*] Enchanced the performance of slow database queries
@@ -250,7 +250,7 @@
 	%[labelwidth=!, labelindent=0pt, leftmargin=*]
 	\begin{enumerate}[leftmargin=*, rightmargin=10pt]
 		\item[\textasteriskcentered] \textit{Agile}: Utilised a combination of Kanban and Scrum techniques in small (4 members)
-			and larger (15+ member) teams
+			and larger teams
 		\item[\textasteriskcentered] \textit{Distributed systems}: Implemented features that spanned across multiple services,
 			APIs and modules. Architectured distributed Linux based systems for the past 5 years
 		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}: Crafted relational database queries and reviewed
