OneColumn tex generates one page cv

--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -41,8 +41,8 @@
 						to 1 per year
 					\item[\textasteriskcentered] Enhanced the performance of slow database queries bring
 						the number of production incidents due to human design error down to zero (0)
-					\item[\textasteriskcentered] Investigated more than 20 high profile production
-						issues and presented 4 sensitive incidents to C level stakeholders
+					\item[\textasteriskcentered] Investigated more than 20 high profile incidents and
+						presented 4 of them to C level stakeholders
 					\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed,
 						more robust data model
 				\end{enumerate}
